[gd_scene load_steps=45 format=3 uid="uid://c3kr417x1cub5"]

[ext_resource type="Script" path="res://Scripts/DefenceTowers/BombardTowers/tnt_plane.gd" id="1_crnms"]
[ext_resource type="Texture2D" uid="uid://dcsu3oqe270mr" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Normal0001.png" id="2_t33nh"]
[ext_resource type="Texture2D" uid="uid://dk8s5m4oajxnf" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Normal0002.png" id="3_wxmad"]
[ext_resource type="Texture2D" uid="uid://7ya0kytxorb6" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Normal0003.png" id="4_u4utw"]
[ext_resource type="Texture2D" uid="uid://dv8a313ili2l5" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Normal0004.png" id="5_8sg3t"]
[ext_resource type="Texture2D" uid="uid://gr4ucacnpecg" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Normal0005.png" id="6_p7qrq"]
[ext_resource type="Texture2D" uid="uid://b87u4m6dnlmq" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Normal0006.png" id="7_q2yqx"]
[ext_resource type="Texture2D" uid="uid://cskeucxrhogb3" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Normal0007.png" id="8_4kfhb"]
[ext_resource type="Texture2D" uid="uid://bf1b8b1rdx5ge" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Normal0008.png" id="9_e7pqy"]
[ext_resource type="Texture2D" uid="uid://ctvx75ntlx7lo" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Normal0009.png" id="10_hr5si"]
[ext_resource type="Texture2D" uid="uid://hwyeygx2uja2" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Normal0010.png" id="11_sotms"]
[ext_resource type="Texture2D" uid="uid://7domktlkuqoc" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Normal0011.png" id="12_opyiw"]
[ext_resource type="Texture2D" uid="uid://djq3ip8akavf3" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Normal0012.png" id="13_0sam0"]
[ext_resource type="Texture2D" uid="uid://dar54f850b4ia" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Front0001.png" id="14_h5eky"]
[ext_resource type="Texture2D" uid="uid://c3cyb6ing7p5w" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Front0002.png" id="15_yiqgw"]
[ext_resource type="Texture2D" uid="uid://dtsgdp2y5h2fo" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Front0003.png" id="16_dv0rc"]
[ext_resource type="Texture2D" uid="uid://depjflhemhcf6" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Front0004.png" id="17_bqr1g"]
[ext_resource type="Texture2D" uid="uid://sy0kbnlvq1o5" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Front0005.png" id="18_10rlf"]
[ext_resource type="Texture2D" uid="uid://ciqdyabjo1v3k" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Front0006.png" id="19_0wrv4"]
[ext_resource type="Texture2D" uid="uid://s1xg72ud25j4" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Front0007.png" id="20_nxkfc"]
[ext_resource type="Texture2D" uid="uid://dov1pwtq23oru" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Front0008.png" id="21_sph8f"]
[ext_resource type="Texture2D" uid="uid://6hx0bf53vi7n" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Front0009.png" id="22_uunym"]
[ext_resource type="Texture2D" uid="uid://c7sv7crxdckbg" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Front0010.png" id="23_6l4st"]
[ext_resource type="Texture2D" uid="uid://bwqch13dhwoto" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Front0011.png" id="24_d02x1"]
[ext_resource type="Texture2D" uid="uid://dopnbice4q35l" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Front0012.png" id="25_4qsor"]
[ext_resource type="Texture2D" uid="uid://dvdicr2dr4m75" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Back0001.png" id="26_jvjtw"]
[ext_resource type="Texture2D" uid="uid://b7fysofrjifrw" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Back0002.png" id="27_66fjq"]
[ext_resource type="Texture2D" uid="uid://cd35ujx5lu8e8" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Back0003.png" id="28_jdmja"]
[ext_resource type="Texture2D" uid="uid://cucln8ij5u1w7" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Back0004.png" id="29_w6fek"]
[ext_resource type="Texture2D" uid="uid://gbmfo8gqyqtr" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Back0005.png" id="30_4pc22"]
[ext_resource type="Texture2D" uid="uid://cdde5o0h21umq" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Back0006.png" id="31_4m1va"]
[ext_resource type="Texture2D" uid="uid://djtf8tumje185" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Back0007.png" id="32_jet5a"]
[ext_resource type="Texture2D" uid="uid://keqlheq1lmy7" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Back0008.png" id="33_qw60m"]
[ext_resource type="Texture2D" uid="uid://dcst75my3sa1h" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Back0009.png" id="34_5eoa7"]
[ext_resource type="Texture2D" uid="uid://b7ehft1m8vmwd" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Back0010.png" id="35_8id64"]
[ext_resource type="Texture2D" uid="uid://cvx7a7psmeert" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Back0011.png" id="36_yvare"]
[ext_resource type="Texture2D" uid="uid://2qd5nxr8cblt" path="res://Assets/Animations/Bombards/LV4-2/TNTPlane/Back0012.png" id="37_sstig"]
[ext_resource type="Texture2D" uid="uid://djqnwtl1embrg" path="res://Assets/Animations/Enemies/Shadow.png" id="38_74qye"]
[ext_resource type="AudioStream" uid="uid://41l3817twxl7" path="res://Assets/Sounds/FXs/DefenceTowers/NuclearTurret/活塞推出.wav" id="39_rr3r3"]
[ext_resource type="AudioStream" uid="uid://dun0e3kpynd52" path="res://Assets/Sounds/FXs/DefenceTowers/NuclearTurret/活塞拉回.wav" id="40_sreer"]
[ext_resource type="Texture2D" uid="uid://6mjftwxikkug" path="res://icon.svg" id="41_r37vb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cca3r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_t33nh")
}, {
"duration": 1.0,
"texture": ExtResource("3_wxmad")
}, {
"duration": 1.0,
"texture": ExtResource("4_u4utw")
}, {
"duration": 1.0,
"texture": ExtResource("5_8sg3t")
}, {
"duration": 1.0,
"texture": ExtResource("6_p7qrq")
}, {
"duration": 1.0,
"texture": ExtResource("7_q2yqx")
}, {
"duration": 1.0,
"texture": ExtResource("8_4kfhb")
}, {
"duration": 1.0,
"texture": ExtResource("9_e7pqy")
}, {
"duration": 1.0,
"texture": ExtResource("10_hr5si")
}, {
"duration": 1.0,
"texture": ExtResource("11_sotms")
}, {
"duration": 1.0,
"texture": ExtResource("12_opyiw")
}, {
"duration": 1.0,
"texture": ExtResource("13_0sam0")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_6x2xx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_h5eky")
}, {
"duration": 1.0,
"texture": ExtResource("15_yiqgw")
}, {
"duration": 1.0,
"texture": ExtResource("16_dv0rc")
}, {
"duration": 1.0,
"texture": ExtResource("17_bqr1g")
}, {
"duration": 1.0,
"texture": ExtResource("18_10rlf")
}, {
"duration": 1.0,
"texture": ExtResource("19_0wrv4")
}, {
"duration": 1.0,
"texture": ExtResource("20_nxkfc")
}, {
"duration": 1.0,
"texture": ExtResource("21_sph8f")
}, {
"duration": 1.0,
"texture": ExtResource("22_uunym")
}, {
"duration": 1.0,
"texture": ExtResource("23_6l4st")
}, {
"duration": 1.0,
"texture": ExtResource("24_d02x1")
}, {
"duration": 1.0,
"texture": ExtResource("25_4qsor")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_w2n3l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_jvjtw")
}, {
"duration": 1.0,
"texture": ExtResource("27_66fjq")
}, {
"duration": 1.0,
"texture": ExtResource("28_jdmja")
}, {
"duration": 1.0,
"texture": ExtResource("29_w6fek")
}, {
"duration": 1.0,
"texture": ExtResource("30_4pc22")
}, {
"duration": 1.0,
"texture": ExtResource("31_4m1va")
}, {
"duration": 1.0,
"texture": ExtResource("32_jet5a")
}, {
"duration": 1.0,
"texture": ExtResource("33_qw60m")
}, {
"duration": 1.0,
"texture": ExtResource("34_5eoa7")
}, {
"duration": 1.0,
"texture": ExtResource("35_8id64")
}, {
"duration": 1.0,
"texture": ExtResource("36_yvare")
}, {
"duration": 1.0,
"texture": ExtResource("37_sstig")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[node name="TNTPlane" type="Node2D"]
script = ExtResource("1_crnms")
fly_height = -160.0
move_speed = 60.0

[node name="SpritePlayer" type="Node2D" parent="."]
scale = Vector2(0.3, 0.3)

[node name="Normal" type="AnimatedSprite2D" parent="SpritePlayer"]
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_cca3r")
autoplay = "default"

[node name="NormalShootMarker" type="Marker2D" parent="SpritePlayer/Normal"]
position = Vector2(15, -15)

[node name="Front" type="AnimatedSprite2D" parent="SpritePlayer"]
visible = false
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_6x2xx")
autoplay = "default"

[node name="FrontShootMarker" type="Marker2D" parent="SpritePlayer/Front"]
position = Vector2(-7, -20)

[node name="Back" type="AnimatedSprite2D" parent="SpritePlayer"]
visible = false
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_w2n3l")
autoplay = "default"

[node name="BackShootMarker" type="Marker2D" parent="SpritePlayer/Back"]
position = Vector2(7, 0)

[node name="Shadow" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(0.2, 0.2)
texture = ExtResource("38_74qye")
region_enabled = true
region_rect = Rect2(194, 273, 174, 61)

[node name="PushAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("39_rr3r3")
volume_db = -8.0
bus = &"Sound"

[node name="PullAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("40_sreer")
volume_db = -8.0
bus = &"Sound"

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -3)
texture = ExtResource("41_r37vb")

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
